--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-API_URL= # Host your own instance of hiruki api or use main api url https://api.hiruki.xyz
-WALINE_URL= # Follow the steps to setup your own waline instance on https://waline.js.org
+API_URL= # Host your own instance of hiruki api or use main api url 
+WALINE_URL= # Follow the steps to setup your own waline instance on
